--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,5 +1,8 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css?family=Nunito');
+@import url('https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css');
+@import url('https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap4.min.css');
+@import url('https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap4.min.css');
 
 // Variables
 @import 'variables';
