--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1,5 +1,9 @@
 @import url(https://fonts.googleapis.com/css?family=Nunito);
-@charset "UTF-8"; /*!
+@import url(https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.5.2/css/bootstrap.css);
+@import url(https://cdn.datatables.net/1.13.1/css/dataTables.bootstrap4.min.css);
+@import url(https://cdn.datatables.net/responsive/2.4.0/css/responsive.bootstrap4.min.css);
+@charset "UTF-8";
+/*!
  * Bootstrap  v5.2.2 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
  * Copyright 2011-2022 Twitter, Inc.
